--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
-    "@types/d3-geo": "^3.1.0",
-    "@types/three": "^0.181.0",
-    "@types/topojson-client": "^3.1.5",
     "autofit.js": "^3.2.8",
     "d3-geo": "^3.1.1",
+    "echarts": "^6.0.0",
     "gsap": "^3.13.0",
     "leva": "^0.10.1",
     "react": "^19.1.1",
@@ -27,6 +25,9 @@
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
+    "@types/d3-geo": "^3.1.0",
+    "@types/three": "^0.181.0",
+    "@types/topojson-client": "^3.1.5",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
