--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loveduk/cache-manager": "^1.0.2",
+    "@loveduk/map3d": "^1.1.14",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
+    "antd": "^6.2.0",
     "autofit.js": "^3.2.8",
+    "cesium": "1.118.0",
     "d3-geo": "^3.1.1",
     "echarts": "^6.0.0",
     "gsap": "^3.13.0",
@@ -25,10 +29,7 @@
     "styled-components": "^6.1.19",
     "three": "^0.181.2",
     "topojson-client": "^3.1.0",
-    "zustand": "^5.0.8",
-    "@loveduk/cache-manager": "^1.0.2",
-    "@loveduk/map3d": "^1.1.14",
-    "cesium": "1.118.0"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "less": "^4.5.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^5.4.0"
